# better-notes-web-api

./: .flakehell_baseline  .gitignore  Dockerfile  Makefile  README.md  docker-compose.stage.yml  docker-compose.yml  pyproject.toml  requirements.txt  yoyo.ini
.ansible/: inventory.yml
.ansible/playbooks/: deploy.yml  upgrade.yml
.config/: .coveragerc  .flake8  isort.cfg  mypy.ini  pytest.ini
.github/workflows/: lint-and-test.yml  notify_pull_request.yml
migrations/: 0001.create-foo.py  0002.create-tag.py  0003.create-misc.py  0004.alter-misc.py  0005.alter-misc.py  0006.alter-tag.py  0007.alter-notes.py  0008.alter-misc.py  0009.drop-note.py  0010.drop-tags.py  0011.create-note.py  0012.create-tags.py  0013.drop-misc.py  0014.create-misc.py
web_api/: conftest.py  indexes.py  main.py  settings.py
web_api/accounts/: dependencies.py  entities.py  indexes.py  repositories.py  specs.py  usecases.py  values.py  views.py
web_api/accounts/dependencies/: repositories.py  requests.py  usecases.py
web_api/accounts/tests/: factories.py  test_views.py
web_api/accounts/tests/__snapshots__/: test_views.ambr
web_api/accounts/tests/factories/: repositories.py  repository_factories.py  usecase_factories.py  usecases.py  (+2 more)
web_api/commons/: __init__.py  dependencies.py  entities.py  exception_handlers.py  msgpack.py  responses.py  specs.py  values.py  views.py
web_api/commons/tests/: factories.py
web_api/notes/: __init__.py  dependencies.py  entities.py  interactors.py  repositories.py  specs.py  usecases.py  validators.py  values.py  views.py
web_api/notes/tests/: conftest.py  factories.py  test_interactores.py  test_interactors.py  test_repositories.py  test_usecases.py  test_views.py
(+7 files in other folders)
